@@ -155,8 +155,11 @@ if test "x$bdb_required" = "xyes"; then
                         if test x"${atalk_cv_bdb_version}" = x"yes"; then
                             BDB_CFLAGS="-I${bdbdir}/include${subdir}"
                             BDB_LIBS="-L${bdblibdir} ${atalk_cv_lib_db}"
-                            if test x"$need_dash_r" = x"yes"; then
+                            if test x"$enable_rpath" = x"yes"; then
                                 BDB_LIBS="$BDB_LIBS -R${bdblibdir}"
+                                if test x"$enable_dtags" = x"yes"; then
+                                    BDB_LIBS="$BDB_LIBS -Wl,--enable-new-dtags"
+                                fi
                             fi
                             BDB_BIN="$bdbbindir"
                             BDB_PATH="$bdbdir"
@@ -181,8 +184,11 @@ if test "x$bdb_required" = "xyes"; then
                            if test x"${atalk_cv_bdb_version}" = x"yes"; then
                               BDB_CFLAGS="-I${bdbdir}/include${subdir}"
                               BDB_LIBS="-L${bdblibdir} ${atalk_cv_lib_db}"
-                              if test x"$need_dash_r" = x"yes"; then
+                              if test x"$enable_rpath" = x"yes"; then
                                  BDB_LIBS="$BDB_LIBS -R${bdblibdir}"
+                                 if test x"$enable_dtags" = x"yes"; then
+                                     BDB_LIBS="$BDB_LIBS -Wl,--enable-new-dtags"
+                                 fi
                               fi
                               BDB_BIN="$bdbbindir"
                               BDB_PATH="$bdbdir"
