@@ -13,6 +13,9 @@ Changes in 3.1.9
 * NEW: configure option "--with-dbus-daemon=PATH" for Spotlight feature
 * UPD: use "tracker daemon" command instead of "tracker-control" command
        if Gnome Tracker is the recent version.
+* NEW: configure options "--enable-rpath" and "--disable-rpath" which
+       can be used to force setting of RPATH (default on Solaris/NetBSD)
+       or disable it.
 
 Changes in 3.1.8
 ================
